Bug 343071 - Crash on start when the color scheme name contains a dot
Summary: Crash on start when the color scheme name contains a dot
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.13.2
Platform: Kubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL: https://forums.opensuse.org/showthrea...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-20 09:12 UTC by Florian Limberger
Modified: 2018-02-12 14:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Limberger 2015-01-20 09:12:51 UTC
I named a colorscheme with a name containing a dot, after reboot neither konsole nor dolphin (with konsole kpart visible per default) would start, kate crashes when the konsole kpart is activated.

Reproducible: Always

Steps to Reproduce:
1. Settings → Edit current profile → Appearance → New Colorscheme
2. Give it a name with a dot, e.g. “1.1”.
3. Exit konsole and start it again.

Actual Results:  
Konsole doesn't come up, so won't dolphin and kate, if their konsole kparts are activated.

Messages if konsole is launched from another terminal (st in my case):
$ konsole
QDBusConnection: session D-Bus connection created before QCoreApplication. Application may misbehave.
QDBusConnection: session D-Bus connection created before QCoreApplication. Application may misbehave.
unnamed app(5087): Communication problem with  "konsole" , it probably crashed.
Error message was:  "org.freedesktop.DBus.Error.NoReply" : " "Message did not receive a reply (timeout by message bus)" "

Expected Results:  
Konsole should start without showing any special behavior or refuse to accept a color scheme name containing a dot.

Going to $HOME/.kde/share/apps/konsole and editing Shell.profile (or whatever profile has the colorscheme with the dot in the name) and change the name of the color scheme in the Appearance section to something without a dot fixes everything, like in the supplied link.
Comment 1 Kurt Hindenburg 2018-02-11 15:58:00 UTC
https://phabricator.kde.org/D10439
Comment 2 Kurt Hindenburg 2018-02-12 14:43:09 UTC
Git commit a7c3bda7a5e24aee9a176bbcffa3a51c0f81a864 by Kurt Hindenburg.
Committed on 12/02/2018 at 14:39.
Pushed by hindenburg into branch 'master'.

Use QFileInfo::completeBaseName() instead of baseName()

This fixes some infinite loops and other issues when file names have
multiple dots in their file name.

Patch by ahmadsamir
Differential Revision: https://phabricator.kde.org/D10439

M  +1    -1    src/BookmarkHandler.cpp
M  +2    -2    src/ColorSchemeManager.cpp
M  +1    -1    src/KeyboardTranslatorManager.cpp

https://commits.kde.org/konsole/a7c3bda7a5e24aee9a176bbcffa3a51c0f81a864