Use QFileInfo::completeBaseName() instead of baseName()

This fixes some infinite loops and other issues when file names have
multiple dots in their file name.

Patch by ahmadsamir

BUG: 343071
Differential Revision: https://phabricator.kde.org/D10439