src/KeyboardTranslatorManager.cpp
@@ -100,7 +100,7 @@ void KeyboardTranslatorManager::findTranslators()
     // the name with a null pointer to indicate that the translator
     // has not yet been loaded from disk
     foreach (const QString &translatorPath, list) {
-        QString name = QFileInfo(translatorPath).baseName();
+        QString name = QFileInfo(translatorPath).completeBaseName();
 
         if (!_translators.contains(name)) {
             _translators.insert(name, nullptr);
